--- a/index.html
+++ b/index.html
@@ -2,11 +2,67 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewporty" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>LAB-CAR</title>
+  <link href="assets/css/bootstrap.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
+<header>
+  <nav class="navbar">
+      <div class="col-md-6">
+        <div class="col-md-6">
+          <img src="assets/img/logo.png" class="img-responsive">
+        </div>
+      </div>
+      <div class="col-md-4">
+        <ul class="list-inline">
+          <div class="col-md-3">
+            <a href="#">Viajes</a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">Conduce</a>
+          </div>
+          <div class="col-md-4">
+            <a href="#">Inicia Sesión</a>
+          </div>
+        </ul>
+      </div>
+    </nav>
+</header>
+<section id="hero" class="section">
+  <img src="assets/img/taxi.jpg" class="img-responsive">
+  <div id="registro" class="col-md-5 col-md-offset-7 container">
+    <h1>Disfruta del viaje <br>Eres dueño de tu tiempo</h1>
+    <div class="row">
+      <div class="col-md-6">
+        <h3>Viaja con
+          <img src="assets/img/logo-blanco.png">
+        </h3>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4">
+        <h3 class="text-uppercase">Regístrate</h3>
+      </div>
+    </div>
+    <div class="row">
+      <hr class="col-md-3 col-md-offset-1">
+      <span class="col-md-2"> O bien </span>
+      <hr class="col-md-3 ">
+    </div>
+    <div class="row col-md-offset-1">
+      <button type="button" name="button" class="btn btn-lg btn-default">Conviértete en un conductor</button>
+    </div>
+  </div>
+</section>
+<div class="">
 
+</div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="assets/js/bootstrap.js"></script>
+  <script src="assets/js/main.js"></script>
 </body>
 </html>
